# NewGBEmu

./: .gitignore  CMakeLists.txt  NewGBEmu.sln  NewGBEmu.vcxproj  NewGBEmu.vcxproj.filters  Settings.ini  TODO.txt
NewGBEmu Release/Linux/: GBEmu
NewGBEmu Release/Linux/Saves/: P-Gold.rtc  P-Gold.sav
NewGBEmu Release/Windows/: Settings.ini
NewGBEmu Release/Windows/Saves/: P-Gold.rtc  P-Gold.sav
Saves/: .sav  MARIOLAND2.sav  P-Gold.rtc  P-Gold.sav  P-Red.rtc  P-Red.sav  POKECARD.sav  POKEMON RED.sav  POKEMON YELLOW.sav  ZELDA.sav
Source/: Bios.hpp  Gameboy.cpp  Gameboy.hpp  Main.cpp  Memory.hpp  MemoryManager.hpp  main.cpp
Source/Cartridges/: CartMBC1.cpp  CartMBC1.hpp  CartMBC3.cpp  CartMBC3.hpp  CartMBC5.cpp  CartMBC5.hpp  CartRomOnly.cpp  CartRomOnly.hpp  Cartridge.cpp  Cartridge.hpp  CartridgeFactory.hpp  RTCModule.hpp  RamModule.hpp
Source/Components/: Apu.cpp  Apu.hpp  AudioMemoryInterface.hpp  Cpu.cpp  Cpu.hpp  CpuMemoryInterface.hpp  CpuOpcodeTable.cpp  Gpu.cpp  Gpu.hpp  GpuMemoryInterface.hpp  Input.cpp  Input.hpp  InputMemoryInterface.hpp  Memory.cpp  Memory.hpp  MemoryAudioInterface.hpp  Timer.cpp  Timer.hpp  TimerMemoryInterface.hpp
Source/Components/MemoryInterfaces/: AudioMemoryInterface.hpp  CpuMemoryInterface.hpp  GpuMemoryInterface.hpp  InputMemoryInterface.hpp  TimerMemoryInterface.hpp
Source/DebuggingTools/: Debugger.hpp  Instructions.hpp  TilesetViewer.hpp
Source/Utilities/: AddressRange.hpp  Bios.hpp  Bits.hpp  InputInterface.hpp  InterruptFlags.hpp  Paths.hpp  Settings.hpp  Types.hpp
Source/Utilities/Audio/: NoiseChannel.cpp  (+10 more)
